[gd_scene load_steps=6 format=3 uid="uid://b42y372drx7yj"]

[ext_resource type="Script" path="res://Scripts/Menus/DeathScreenController.gd" id="1_5m3j5"]
[ext_resource type="StyleBox" uid="uid://br3q7seea3e66" path="res://StyleBoxs/BUTTONS/Large_BTN_Normal.tres" id="2_13ly1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ol85h"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1f72"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_35ejd"]
bg_color = Color(0.0588235, 0.0588235, 0.0588235, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[node name="Master" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5m3j5")
TimeBetweenNoti = 0.2
EndSize = Vector2(1.3, 1.3)
Dur = 0.3

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 1)
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 150
metadata/_edit_use_anchors_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="MarginContainer"]
layout_mode = 2
border_width = 3.6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LBL_Round" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 150
text = "Round - 50"

[node name="LBL_Highscore" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "High Score - 10"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 125

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BTN_Home" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control"]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -46.5
offset_right = 237.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(232.5, 50.5)
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_13ly1")
theme_override_styles/hover = ExtResource("2_13ly1")
theme_override_styles/pressed = ExtResource("2_13ly1")
theme_override_styles/disabled = ExtResource("2_13ly1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ol85h")
text = "Home"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 95)
layout_mode = 2
size_flags_horizontal = 3

[node name="BTN_Retry" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control2"]
modulate = Color(0.752941, 0.752941, 0.752941, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -237.5
offset_top = -46.5
offset_right = 237.5
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(240.5, 50.5)
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("2_13ly1")
theme_override_styles/hover = ExtResource("2_13ly1")
theme_override_styles/pressed = ExtResource("2_13ly1")
theme_override_styles/disabled = ExtResource("2_13ly1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_o1f72")
text = "Retry"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_top = 90
theme_override_constants/margin_right = 350

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_35ejd")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/PanelContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/PanelContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Unlocked"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control/BTN_Home" to="." method="_on_btn_home_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control/BTN_Home" to="." method="_on_btn_home_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control/BTN_Home" to="." method="_on_btn_home_pressed"]
[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control2/BTN_Retry" to="." method="_on_btn_retry_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control2/BTN_Retry" to="." method="_on_btn_retry_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/Control2/BTN_Retry" to="." method="_on_btn_retry_pressed"]
